--- a/storefront.html
+++ b/storefront.html
@@ -1,3 +1,8 @@
+<!--Aurthor: Michael R Winstead
+Date: 80/17/2025-->
+
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,7 +14,7 @@
 <body>
     <!-- Header -->
     <header>
-        <h1>StudentID12345 - My Online Store</h1>
+        <h1>micwin2135 - My Online Store</h1>
     </header>
 
     <!-- Navigation -->
