--- a/storefront.html
+++ b/storefront.html
@@ -17,9 +17,10 @@ Date: 80/17/2025-->
         <h1>micwin2135 - My Online Store</h1>
     </header>
 
-    <!-- Navigation -->
+    <!-- Nav -->
     <nav>
         <ul>
+            <!--Links-->
             <li><a href="#home">Home</a></li>
             <li><a href="#products">Products</a></li>
             <li><a href="#contact">Contact</a></li>
@@ -31,7 +32,7 @@ Date: 80/17/2025-->
         <section id="products">
             <h2>Our Featured Products</h2>
 
-            <!-- Product Table -->
+            <!--Table -->
             <table>
                 <caption>Store Inventory</caption>
                 <colgroup>
@@ -40,6 +41,7 @@ Date: 80/17/2025-->
                     <col style="background-color: #f9f9f9;">
                     <col>
                 </colgroup>
+                <!--Thead-->
                 <thead>
                     <tr>
                         <th>Product Name</th>
@@ -48,22 +50,26 @@ Date: 80/17/2025-->
                         <th>Availability</th>
                     </tr>
                 </thead>
+                <!--Tbody-->
                 <tbody>
                     <tr>
-                        <td>Wireless Mouse</td>
-                        <td>$25.99</td>
+                        <!-- product 1-->
+                        <td>Playstation 5</td>
+                        <td>$499.99</td>
                         <td>Electronics</td>
                         <td>In Stock</td>
                     </tr>
                     <tr>
-                        <td>Bluetooth Speaker</td>
-                        <td>$49.99</td>
-                        <td>Audio</td>
+                        <!-- product 3-->
+                        <td>PSVR2</td>
+                        <td>$299.99</td>
+                        <td>Electronics</td>
                         <td>Limited</td>
                     </tr>
                     <tr>
-                        <td>Desk Lamp</td>
-                        <td>$19.99</td>
+                        <!--Product 3-->
+                        <td>Gaming chair</td>
+                        <td>$59.99</td>
                         <td>Home</td>
                         <td>Out of Stock</td>
                     </tr>
